Add implementation in noodler.py and example

--- a/implementation-with-example.ipynb
+++ b/implementation-with-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "agreed-daily",
+   "id": "median-isolation",
    "metadata": {},
    "source": [
     "# Noodlification and unification on an example"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "existing-yield",
+   "id": "tired-limitation",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chinese-importance",
+   "id": "middle-campus",
    "metadata": {},
    "source": [
     "![algo](img/string_algo.png)"
@@ -39,19 +39,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polyphonic-boost",
+   "id": "brief-institute",
    "metadata": {},
    "source": [
     "## System description\n",
-    "The problem is given by two components:\n",
-    " 1. dictionary `constraints`${}\\colon \\mathsf{Var} \\to \\mathsf{RE}$. We expect the regular expressions given as strings for now.\n",
-    " 2. equation $e$ of the form $e \\in \\mathsf{Var}^* \\cdot \\{=\\} \\cdot \\mathsf{Var}^*$. This is specified by `e_l` and `e_r`, which can be lists of strings (var-names) or as a single string if variables are only characters."
+    "The string equation problem with variables $\\mathsf{Var}$ is given by two components:\n",
+    " 1. equation $e$ of the form $e_l = e_r$ where $e_l, e_r \\in \\mathsf{Var}^+$. In the code, we use `e_l` and `e_r`.\n",
+    " 2. dictionary `constraints`${}\\colon \\mathsf{Var} \\to \\mathsf{RE(\\mathsf{Var})}$. The regular expressions must be given as strings parsable by Awali, see [this guide](http://files.vaucanson-project.org/1.0/gs/RationalExpression.html) for more details."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "injured-ministry",
+   "id": "infrared-donna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "respected-episode",
+   "metadata": {},
+   "source": [
+    "In the running example, we use variables `x`,`y`, and `z` with alphabet `a,b,c`. In the following, we create an equation $xyz = xyxy$ with regular constraints\n",
+    "* $L_x = L_z = \\Sigma^+$ and \n",
+    "* $L_y = \\Sigma \\Sigma^+.$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "liquid-strike",
+   "id": "partial-siemens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,19 +80,19 @@
     "e_r = \"xyxy\"\n",
     "\n",
     "alph = \"abc\"\n",
-    "alph_exp = f\"({'+'.join(alph)})\"\n",
-    "sigma_plus = f\"{alph_exp}{alph_exp}*\"\n",
+    "Sigma_exp = f\"({'+'.join(alph)})\"\n",
+    "Sigma_plus = f\"{Sigma_exp}{Sigma_exp}*\"\n",
     "constraints = {\n",
-    "    \"x\" : sigma_plus,\n",
-    "    \"y\" : f\"{alph_exp}{sigma_plus}\",\n",
-    "    \"z\" : sigma_plus\n",
+    "    \"x\" : Sigma_plus,\n",
+    "    \"y\" : f\"{Sigma_exp}{Sigma_plus}\",\n",
+    "    \"z\" : Sigma_plus\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "circular-allocation",
+   "id": "precise-command",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +114,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proved-refrigerator",
+   "id": "breeding-highland",
+   "metadata": {},
+   "source": [
+    "Our algorithm works with _segment automata_. Automata, which can be split to segments by removing ε-transitions. The idea is, roughly, that a segment automaton represents a concatenation of automata for a side of the input equation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "latin-equity",
    "metadata": {},
    "source": [
     "## Conversion to automata and creating chains\n",
@@ -114,11 +132,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "premium-prime",
+   "id": "legendary-services",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def automata_for_side(var_sequence, re_dict, alphabet):\n",
+    "def automata_for_vars(var_sequence, re_dict, alphabet):\n",
     "    \"\"\"\n",
     "    Create automata for sequence of variables.\n",
     "    \n",
@@ -157,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "great-encoding",
+   "id": "martial-calculator",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +466,7 @@
     }
    ],
    "source": [
-    "auts = automata_for_side(e_r, constraints, alph)\n",
+    "auts = automata_for_vars(e_r, constraints, alph)\n",
     "for aut in auts:\n",
     "    aut.display()"
    ]
@@ -456,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "personal-innocent",
+   "id": "bearing-description",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "capital-helena",
+   "id": "comparable-national",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-bible",
+   "id": "wicked-motorcycle",
    "metadata": {},
    "source": [
     "## Make product and noodles\n",
@@ -754,12 +772,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "reported-moses",
+   "id": "rubber-merchant",
    "metadata": {},
    "outputs": [],
    "source": [
-    "automata_l = automata_for_side(e_l, constraints, alph)\n",
-    "automata_r = automata_for_side(e_r, constraints, alph)\n",
+    "automata_l = automata_for_vars(e_l, constraints, alph)\n",
+    "automata_r = automata_for_vars(e_r, constraints, alph)\n",
     "chain_l = chain_automata(automata_l)\n",
     "chain_r = chain_automata(automata_r)"
    ]
@@ -767,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "danish-western",
+   "id": "resident-vermont",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "descending-efficiency",
+   "id": "serial-ethernet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "collected-occasion",
+   "id": "forty-twins",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hundred-cloud",
+   "id": "dedicated-camera",
    "metadata": {},
    "source": [
     "### Noodlify!\n",
@@ -1360,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "hourly-graph",
+   "id": "dedicated-conference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,11 +1433,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aging-technical",
+   "id": "convenient-biodiversity",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def noodlify(aut, nonempty=False):\n",
+    "def noodlify(aut, include_empty=False):\n",
     "    \"\"\"\n",
     "    Create noodles from segment automaton.\n",
     "    \n",
@@ -1433,8 +1451,8 @@
     "    ----------\n",
     "    aut : aut\n",
     "        Segment automaton to noodlify.\n",
-    "    nonempty : Bool (default False)\n",
-    "        Returns only non-empty noodels if True.\n",
+    "    include_empty : Bool (default False)\n",
+    "        Include also empty noodels if True.\n",
     "    \"\"\"\n",
     "    # Stores the noodles\n",
     "    noodles = []\n",
@@ -1455,8 +1473,9 @@
     "                if tr != noodle_trans[i]:\n",
     "                    noodle.del_transition(tr)\n",
     "        \n",
-    "        if not nonempty or noodle.num_states > 0:\n",
-    "            noodles.append(noodle.trim())\n",
+    "        noodle = noodle.trim()\n",
+    "        if include_empty or noodle.num_states() > 0:\n",
+    "            noodles.append(noodle)\n",
     "   \n",
     "    return noodles"
    ]
@@ -1464,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "authentic-integrity",
+   "id": "functioning-torture",
    "metadata": {
     "tags": []
    },
@@ -2116,23 +2135,6 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"1068pt\" height=\"77pt\" viewBox=\"0.00 0.00 1068.00 77.00\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 73)\">\n",
        "<title>%3</title>\n",
@@ -2621,40 +2623,6 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"1068pt\" height=\"77pt\" viewBox=\"0.00 0.00 1068.00 77.00\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 73)\">\n",
        "<title>%3</title>\n",
@@ -2987,57 +2955,6 @@
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"1189pt\" height=\"77pt\" viewBox=\"0.00 0.00 1189.00 77.00\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 73)\">\n",
        "<title>%3</title>\n",
@@ -3201,57 +3118,6 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"1128.12,-46.26 1124.96,-36.15 1121.13,-46.03 1128.12,-46.26\"/>\n",
        "<text text-anchor=\"middle\" x=\"1117\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">[a-c]</text>\n",
        "</g>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
        "</g>\n",
        "</svg>"
       ],
@@ -3441,57 +3307,6 @@
        "<polygon fill=\"black\" stroke=\"black\" points=\"1249.12,-46.26 1245.96,-36.15 1242.13,-46.03 1249.12,-46.26\"/>\n",
        "<text text-anchor=\"middle\" x=\"1238\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">[a-c]</text>\n",
        "</g>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
-       "</g>\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.SVG object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"8pt\" height=\"8pt\" viewBox=\"0.00 0.00 8.00 8.00\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 4)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-4 4,-4 4,4 -4,4\"/>\n",
        "</g>\n",
        "</svg>"
       ],
@@ -3720,7 +3535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spatial-circulation",
+   "id": "dietary-footage",
    "metadata": {},
    "source": [
     "## Unification\n",
@@ -3730,7 +3545,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "vertical-shopping",
+   "id": "funky-roulette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3780,7 +3595,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "disabled-attraction",
+   "id": "committed-delivery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3863,7 +3678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "herbal-bottom",
+   "id": "relative-annotation",
    "metadata": {},
    "source": [
     "**My note** Currently, when we split a noodle into the segments, I only trim the automata (keep only reachable and non-dead states). I guess we can even minimize the automata as well."
@@ -3871,7 +3686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lyric-implement",
+   "id": "about-blair",
    "metadata": {},
    "source": [
     "In the following cell, we take the first noodle and show the corresponding segments."
@@ -3880,7 +3695,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "funky-textbook",
+   "id": "introductory-korean",
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-pressing",
+   "id": "laden-notice",
    "metadata": {},
    "source": [
     "#### Unification of the segment automata\n",
@@ -4311,7 +4126,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "quarterly-liabilities",
+   "id": "strange-import",
    "metadata": {},
    "outputs": [
     {
@@ -4820,7 +4635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "announced-combining",
+   "id": "handled-dayton",
    "metadata": {},
    "source": [
     "This shows the last noodle and then the unification of the segments of the noodle and the automata on the right"
@@ -4829,7 +4644,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "competitive-advice",
+   "id": "young-grant",
    "metadata": {},
    "outputs": [
     {
