Basic binder setup

--- a/example-full-algo.ipynb
+++ b/example-full-algo.ipynb
@@ -32,9 +32,7 @@
    ],
    "source": [
     "import awalipy\n",
-    "import noodler\n",
-    "from spot.jupyter import display_inline\n",
-    "from IPython.display import SVG"
+    "import noodler"
    ]
   },
   {
