Refactor: SESystem -> SingleSESystem
Preparation for introducing systems with equation systems
(conjunction of equations).

--- a/example-full-algo-long.ipynb
+++ b/example-full-algo-long.ipynb
@@ -330,7 +330,7 @@
    "source": [
     "aut_constraints = {var : awalipy.RatExp(c, alphabet=alph).exp_to_aut() for var, c in constraints.items()}\n",
     "\n",
-    "system = noodler.AutSESystem(eq, aut_constraints)\n",
+    "system = noodler.AutSingleSESystem(eq, aut_constraints)\n",
     "print(system.eq)\n",
     "system.show_constraints()"
    ]
