--- a/example-full-algo-long.ipynb
+++ b/example-full-algo-long.ipynb
@@ -642,7 +642,7 @@
     }
    ],
    "source": [
-    "n = noodler.Noodler(system)\n",
+    "n = noodler.QueueNoodler(system)\n",
     "print(system.eq)\n",
     "n.one_solution()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")\n",
@@ -957,7 +957,7 @@
    ],
    "source": [
     "switched = system.switched()\n",
-    "n = noodler.Noodler(switched)\n",
+    "n = noodler.QueueNoodler(switched)\n",
     "print(switched.eq)\n",
     "n.one_solution()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")\n",
@@ -980,7 +980,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "n = noodler.Noodler(system)\n",
+    "n = noodler.QueueNoodler(system)\n",
     "n.one_solution()"
    ]
   },
@@ -1000,7 +1000,7 @@
    ],
    "source": [
     "%%timeit\n",
-    "n = noodler.Noodler(switched)\n",
+    "n = noodler.QueueNoodler(switched)\n",
     "n.one_solution()"
    ]
   }
