--- a/example-full-algo.ipynb
+++ b/example-full-algo.ipynb
@@ -354,7 +354,7 @@
    "id": "extensive-boost",
    "metadata": {},
    "source": [
-    "The solution is a unified and balanced system (of class `AutSingleSESystem`). We know that in such a system, a solution exists. We use `Noodler.one_solution()` to get one unified and balanced system. The system is stored in `Noodler.solutions`. You can visualize the variable constraints of a solution by `solution.show_constraints()`."
+    "The solution is a unified and balanced system (of class `AutSingleSESystem`). We know that in such a system, a solution exists. We use `QueueNoodler.one_solution()` to get one unified and balanced system. The system is stored in `QueueNoodler.solutions`. You can visualize the variable constraints of a solution by `solution.show_constraints()`."
    ]
   },
   {
@@ -619,7 +619,7 @@
     }
    ],
    "source": [
-    "n = noodler.Noodler(system)\n",
+    "n = noodler.QueueNoodler(system)\n",
     "print(system.eq)\n",
     "n.one_solution().show_constraints()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")"
@@ -951,7 +951,7 @@
    ],
    "source": [
     "switched = system.switched()\n",
-    "n = noodler.Noodler(switched)\n",
+    "n = noodler.QueueNoodler(switched)\n",
     "print(switched.eq)\n",
     "n.one_solution()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")\n",
@@ -1545,7 +1545,7 @@
     }
    ],
    "source": [
-    "n = noodler.Noodler(system)\n",
+    "n = noodler.QueueNoodler(system)\n",
     "print(system.eq)\n",
     "n.one_solution().show_constraints()\n",
     "print(f\"Other {len(n.Q)} unprocessed noodles are in the queue\")"
